add properties, entity
